add_subdirectory(LibAudio)
add_subdirectory(LibC)
add_subdirectory(LibChess)
add_subdirectory(LibCore)
add_subdirectory(LibCrypt)
add_subdirectory(LibCrypto)
add_subdirectory(LibCompress)
add_subdirectory(LibDebug)
add_subdirectory(LibDesktop)
add_subdirectory(LibGemini)
add_subdirectory(LibGfx)
add_subdirectory(LibGUI)
add_subdirectory(LibHTTP)
add_subdirectory(LibIPC)
add_subdirectory(LibImageDecoderClient)
add_subdirectory(LibJS)
add_subdirectory(LibKeyboard)
add_subdirectory(LibLine)
add_subdirectory(LibM)
add_subdirectory(LibMarkdown)
add_subdirectory(LibPCIDB)
add_subdirectory(LibProtocol)
add_subdirectory(LibPthread)
add_subdirectory(LibTar)
add_subdirectory(LibTextCodec)
add_subdirectory(LibThread)
add_subdirectory(LibTLS)
add_subdirectory(LibVT)
add_subdirectory(LibWeb)
add_subdirectory(LibX86)
add_subdirectory(LibDiff)
add_subdirectory(LibCpp)
