add_subdirectory(AudioServer)
add_subdirectory(DHCPClient)
add_subdirectory(LaunchServer)
add_subdirectory(LookupServer)
add_subdirectory(NotificationServer)
add_subdirectory(ProtocolServer)
add_subdirectory(SystemMenu)
add_subdirectory(SystemServer)
add_subdirectory(Taskbar)
add_subdirectory(TelnetServer)
add_subdirectory(TTYServer)
add_subdirectory(WebServer)
add_subdirectory(WindowServer)
