add_subdirectory(AK)
add_subdirectory(Kernel)
add_subdirectory(LibC)
add_subdirectory(LibCompress)
add_subdirectory(LibCore)
add_subdirectory(LibCpp)
add_subdirectory(LibEDID)
add_subdirectory(LibELF)
add_subdirectory(LibGfx)
add_subdirectory(LibGL)
add_subdirectory(LibIMAP)
add_subdirectory(LibJS)
add_subdirectory(LibM)
add_subdirectory(LibMarkdown)
add_subdirectory(LibPDF)
add_subdirectory(LibPthread)
add_subdirectory(LibRegex)
add_subdirectory(LibSQL)
add_subdirectory(LibTest)
add_subdirectory(LibThreading)
add_subdirectory(LibTimeZone)
add_subdirectory(LibUnicode)
add_subdirectory(LibWasm)
add_subdirectory(LibWeb)
if (${SERENITY_ARCH} STREQUAL "i686")
    add_subdirectory(UserspaceEmulator)
endif()
add_subdirectory(LibCrypto)
add_subdirectory(LibTLS)
add_subdirectory(Spreadsheet)
