add_subdirectory(AK)
add_subdirectory(Kernel)
add_subdirectory(LibAudio)
add_subdirectory(LibC)
add_subdirectory(LibCompress)
add_subdirectory(LibCore)
add_subdirectory(LibCpp)
add_subdirectory(LibDeviceTree)
add_subdirectory(LibDiff)
add_subdirectory(LibEDID)
add_subdirectory(LibELF)
add_subdirectory(LibGfx)
add_subdirectory(LibGL)
add_subdirectory(LibGLSL)
add_subdirectory(LibIMAP)
add_subdirectory(LibJS)
add_subdirectory(LibLocale)
add_subdirectory(LibMarkdown)
add_subdirectory(LibPDF)
add_subdirectory(LibRegex)
add_subdirectory(LibSemVer)
add_subdirectory(LibShell)
add_subdirectory(LibSQL)
add_subdirectory(LibTest)
add_subdirectory(LibTextCodec)
add_subdirectory(LibThreading)
add_subdirectory(LibTimeZone)
add_subdirectory(LibUnicode)
add_subdirectory(LibURL)
add_subdirectory(LibMedia)
add_subdirectory(LibWasm)
add_subdirectory(LibWeb)
add_subdirectory(LibWebView)
add_subdirectory(LibXML)
add_subdirectory(LibCrypto)
add_subdirectory(LibTLS)
add_subdirectory(Spreadsheet)
add_subdirectory(Utilities)
